[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/duck.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 15.6525

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Enemy" type="KinematicBody2D"]
position = Vector2( 47, 19 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.523598
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )

[node name="MoveLeft" type="Tween" parent="."]

[node name="MoveRight" type="Tween" parent="."]

[connection signal="tween_completed" from="MoveLeft" to="." method="_on_MoveLeft_tween_completed"]
[connection signal="tween_completed" from="MoveRight" to="." method="_on_MoveRight_tween_completed"]
